# workflows-wasmcloud

./: .gitignore  Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
src/: lib.rs
wasmFile/: add.wasm  adde.wasm  print.wasm  wait.wasm
wit/: deps.toml  world.wit
