[package]
name = "workflows-executor"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcloud-component = "0.2.0"
lazy_static = "1.4"
rusqlite = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version= "1.11.0", features = ["v4"] }
