[package]
name = "workflows-executor"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcloud-component = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version= "1.11.0", features = ["v4"] }
wit-bindgen = "0.36.0"
